salesforce/ops-atlas/main/default/objects/OpsAtlas_Activity__c/OpsAtlas_Activity__c.object-meta.xml
<CustomObject>
    <label>OpsAtlas Activity</label>
    <pluralLabel>OpsAtlas Activities</pluralLabel>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>