salesforce/ops-atlas/main/default/objects/OpsAtlas_Activity__c/fields/Accountable__c.field-meta.xml
<CustomField>
    <fullName>Accountable__c</fullName>
    <label>Accountable (RACI - A)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>