salesforce/ops-atlas/main/default/objects/OpsAtlas_Activity__c/fields/Consulted__c.field-meta.xml
<CustomField>
    <fullName>Consulted__c</fullName>
    <label>Consulted (RACI - C)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>