salesforce/ops-atlas/main/default/objects/OpsAtlas_Activity__c/fields/Informed__c.field-meta.xml
<CustomField>
    <fullName>Informed__c</fullName>
    <label>Informed (RACI - I)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>