salesforce/ops-atlas/main/default/objects/OpsAtlas_Activity__c/fields/Responsible__c.field-meta.xml
<CustomField>
    <fullName>Responsible__c</fullName>
    <label>Responsible (RACI - R)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>