salesforce/ops-atlas/main/default/objects/OpsAtlas_Activity__c/fields/Workstream__c.field-meta.xml
<CustomField>
    <fullName>Workstream__c</fullName>
    <label>Workstream</label>
    <referenceTo>OpsAtlas_Workstream__c</referenceTo>
    <relationshipLabel>OpsAtlas Activities</relationshipLabel>
    <relationshipName>OpsAtlas_Activities</relationshipName>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>